<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TTR</string>
    <string name="initiative">%d.%d</string>

    <string name="encounter_join_button_title">JOIN</string>
    <string name="encounter_join_code_field_hint">ENCOUNTER CODE</string>
    <string name="encounter_join_char_name_field_hint">CHARACTER NAME</string>
    <string name="encounter_join_char_initiative_hint">CHARACTER INITIATIVE</string>
    <string name="encounter_join_char_dex_hint">CHARACTER DEX MODIFIER</string>

    <string name="create_menu_item_title">CREATE</string>
    <string name="join_menu_item_title">JOIN</string>
    <string name="update_menu_item_title">UPDATE</string>

    <string name="create_encounter_button_title">CREATE</string>
    <string name="join_encounter_button_title">JOIN</string>
    <string name="add_participant_button_title">ADD</string>
    <string name="participant_name_hint">Name</string>
    <string name="participant_initiative_hint">INI</string>
    <string name="participant_dexterity_hint">DEX</string>

    <string name="skip_menu_item_title">Skip</string>
    <string name="round_index">Round #%d</string>
    <string name="edit_menu_item_title">Edit</string>
    <string name="error_title">Error</string>

    <string name="error_confirmation_action_title">Cancel</string>

    <string name="notification_title">Encounter</string>
    <string name="encounter_title">Encounter</string>
    <string name="close_confirmation_title">Already leaving ?</string>
    <string name="close_confirmation_message">If you\'re the last player in the game it will be automatically closed</string>
    <string name="close_positive_button">Close</string>
    <string name="close_negative_button">Cancel</string>
    <string name="share_menu_item">Share</string>

    <string name="encounter_notification_title">Encounter %s</string>
    <string name="encounter_notification_message">%1$s turn. %2$s</string>
    <string name="no_one_is_here_yet">NO ONE IS HERE YET</string>
    <string name="no_participants_yet">No participants yet</string>
</resources>